<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_settings_title"
        android:textSize="32sp"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/current_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/update_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_password_button"/>

    <Button
        android:id="@+id/delete_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_button"/>

    <Button
        android:id="@+id/account_settings_exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_button"/>

</LinearLayout>